--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game</title>
     <link rel="stylesheet" href="./Css/styles.css" />
-    <script src="./js/game.js" defer></script>
+    <script src="./js/game.js" type="module"></script>
   </head>
   <body>
     <div id="logg-inn">
