--- a/game.html
+++ b/game.html
@@ -46,7 +46,10 @@
 
       <div id="actions">
         <div class="column">
-          <progress id="health-bar" max="100" value="100"></progress>
+          <div>
+            <progress id="health-bar" max="100" value="100"></progress>
+            <p id="bar-health"></p>
+          </div>
           <div class="row">
             <div class="action-btn" id="attack"><p>Attack</p></div>
             <div class="action-btn" id="run"><p>Run</p></div>
