fixed inventory and music

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <option value="female">female</option>
         <option value="non-binary">non-binary</option>
         <option value="do not wish to input">do not wish to input</option>
+        <option value="Other">Other</option>
       </select>
 
       <button id="start-game">Start</button>
