--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div id="logg-inn">
+       <!--⇓THIS CHOOSES NAME⇓-->
       <input type="text" id="nameify" placeholder="Enter name" value="" />
+       <!--⇑THIS CHOOSES NAME⇑-->
 
+       <!--⇓THIS CHOOSES GENDER⇓-->
       <select name="gender" id="gender-el">
         <option value="none"></option>
         <option value="male">male</option>
@@ -19,8 +22,10 @@
         <option value="do not wish to input">do not wish to input</option>
         <option value="Other">Other</option>
       </select>
+      <!--⇑THIS CHOOSES GENDER⇑-->
 
       <button id="start-game">Start</button>
     </div>
+    <!--THIS IS THE MAIN PAGE FOR USER INFO-->
   </body>
 </html>
