--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Css/game.css" />
-    <script src="./js/game.js" type="module"></script>
+    <script src="./js/gameLogic/game.js" type="module"></script>
   </head>
   <body>
     <div id="game">
