--- a/gameover.html
+++ b/gameover.html
@@ -10,6 +10,6 @@
   <body>
     <h1>GAME OVER</h1>
     <button id="restart">restart</button>
-    <!--This will taku you back too the index-->
+    <!--This will take you back too the index-->
   </body>
 </html>
